--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Currículo</title>
+</head>
+<body>
+    <h1>João Gabriel da Silva</h1>
+    <h2>Estudante de Análise e Desenvolvimento de Sistemas</h2>
+    <h2>Formações</h2>
+    <p>Ensino médio com Habilitação Profissional Técnica em Logística - Etec Dona Escolástica Rosa - Concluído em 2024</p>
+    <p>Técnico em Desenvolvimento de Sistemas - SENAI - Cursando</p>
+    <p>Técnologo em Análise e Desenvolvimento de Sistemas - IFSP - Cursando</p>
+</body>
+</html>
